--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>Tomcat_docker_debug</artifactId>
+    <artifactId>jakarta</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Tomcat_docker_debug</name>
+    <name>jakarta</name>
     <packaging>war</packaging>
 
     <properties>
@@ -66,5 +66,7 @@
                 <version>3.3.2</version>
             </plugin>
         </plugins>
+
+        <finalName>ROOT</finalName>
     </build>
 </project>
